Ensure filter and reflection outsets are applied on paint invalidation rect

Previously filter and reflection outsets are applied in
mapToVisualRectInAncestorSpace along the container chain. This missed
filters/reflections between the object and its container.

BUG=607989
TEST=fast/repaint/filter-invalidation-positioned-child.html
TEST=fast/repaint/reflection-invalidation-positioned-child.html

Review-Url: https://codereview.chromium.org/1934833002
Cr-Commit-Position: refs/heads/master@{#391525}

Former-commit-id: 05fb4239a14a319f2a76de26b1f5a5413bb71ed1